--- a/MISA.QuanLyTaiSan.BL/MISA.QuanLyTaiSan.BL.csproj
+++ b/MISA.QuanLyTaiSan.BL/MISA.QuanLyTaiSan.BL.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\MISA.QuanLyTaiSan.DL\MISA.QuanLyTaiSan.DL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="FixedAssetCategoryBL\" />
+  </ItemGroup>
+
 </Project>
